<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/drawer_add"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/drawer_add" />
    <item
        android:id="@+id/drawer_position"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/drawer_position" />
    <item
        android:id="@+id/drawer_setting"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/drawer_setting" />
    <item
        android:id="@+id/drawer_feedback"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/drawer_feedback" />
    <item
        android:id="@+id/drawer_about"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/drawer_about" />

</menu>
