<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_paddding"
    tools:context="com.warbao.ll.whether.activity.HitPosActivity">

    <EditText
        android:id="@+id/hit_pos_edittext"
        android:text="@string/hit_pos_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/hit_pos_nowpos"
        android:text="@string/now_pos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>

    <TextView
        android:id="@+id/hit_pos_hitcity"
        android:text="@string/hitcity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/hit_pos_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>

</LinearLayout>
