<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.warbao.ll.whether.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/main_swiperefreshlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_blue">
        <ScrollView
            android:id="@+id/main_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/waicheng_linearlayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/default_paddding"
                android:paddingRight="@dimen/default_paddding">
                <!--日期 周几-->
                <TextView
                    android:id="@+id/week_date"
                    android:text="@string/default_date_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:gravity="center"/>
                <!--现在的温度-->
                <TextView
                    android:id="@+id/now_temperature"
                    android:text="0℃"
                    android:textSize="@dimen/now_temperature_textsize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <!--天气 温度-->
                <LinearLayout
                    android:id="@+id/whether_type"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/whether_type_imageview"
                        android:src="@drawable/overcast"
                        android:layout_width="@dimen/default_text_height"
                        android:layout_height="@dimen/default_text_height"/>
                    <TextView
                        android:id="@+id/whether_type_textview"
                        android:text="@string/default_whether_text"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:textSize="@dimen/default_text_small_height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical" />
                </LinearLayout>
                <!--具体的天气信息-->
                <TableLayout
                    android:id="@+id/whether_concrete_tablelayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/default_text_height">
                    <TableRow
                        android:paddingTop="@dimen/default_paddding">
                        <TextView
                            android:id="@+id/whether_concrete_content1"
                            android:textSize="@dimen/whether_concrete_textsize"
                            android:text="@string/default_whether_concrete_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/whether_concrete_content2"
                            android:textSize="@dimen/whether_concrete_textsize"
                            android:text="@string/default_whether_concrete_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/whether_concrete_mid_dim"/>
                    </TableRow>
                    <TableRow
                        android:paddingTop="@dimen/default_paddding">
                        <TextView
                            android:id="@+id/whether_concrete_content3"
                            android:textSize="@dimen/whether_concrete_textsize"
                            android:text="@string/default_whether_concrete_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/whether_concrete_content4"
                            android:textSize="@dimen/whether_concrete_textsize"
                            android:text="@string/default_whether_concrete_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/whether_concrete_mid_dim"/>
                    </TableRow>
                    <TableRow
                        android:paddingTop="@dimen/default_paddding">
                        <TextView
                            android:id="@+id/whether_concrete_content5"
                            android:textSize="@dimen/whether_concrete_textsize"
                            android:text="@string/default_whether_concrete_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/whether_concrete_content6"
                            android:textSize="@dimen/whether_concrete_textsize"
                            android:text="@string/default_whether_concrete_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/whether_concrete_mid_dim"/>
                    </TableRow>
                </TableLayout>
                <LinearLayout
                    android:id="@+id/main_ad"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/default_paddding"
                    android:paddingLeft="@dimen/default_paddding">
                    <TextView
                        android:id="@+id/main_ad_text"
                        android:text="@string/default_ad_content"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/default_text_small_height"
                        android:clickable="true"
                        android:autoLink="all"
                        android:autoText="false" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/white"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/fresh_time"
                    android:text="@string/default_fresh_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/default_paddding"/>
                <GridView
                    android:id="@+id/week_whether_gridview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/default_blue"
                    android:numColumns="5"
                    android:paddingTop="@dimen/default_paddding"
                    ></GridView>
                <TextView
                    android:id="@+id/data_come"
                    android:text="@string/default_datacome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/default_paddding"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>
